# learn-opengl

./: .gitmodules  CMakeLists.txt  README.md
code_snippets/: quick.cpp  simple_window.cpp  test.cpp  triangle.cpp
src/: triangle.cpp
